fix: Inconsistent gaps on homepage

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -14,3 +14,9 @@ a {
   box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset,
     rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
 }
+
+span.p-chip-text{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
